// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the children correctly when no error occurs 1`] = `
<body>
  <div>
    Test
  </div>
</body>
`;

exports[`renders the error boundary correctly when an error occurs 1`] = `
<body>
  <div>
    <h1>
      Something went wrong.
    </h1>
  </div>
</body>
`;
